@@ -15,24 +15,26 @@
     xor_dec(message, output, key, size); \
 } while (0)
 
-char* str_dup(const char* str);
-size_t str_len(const char* str);
-size_t sizeof_w(const wchar_t* str);
-char** split_first_space(const char* str);
-int str_cmp(const char *s1, const char *s2);
-void *mem_set(void *dest, int value, size_t count);
-int mem_cmp(const void *s1, const void *s2, size_t n);
-void *mem_cpy(void *dest, const void *src, size_t count);
-wchar_t* wide_concat(const wchar_t* str1, const wchar_t* str2);
-unsigned char* obfuscate_usage(unsigned char* arr, size_t arr_size);
-void rotate_left(unsigned char *data, size_t size, unsigned int bits);
-char* mem_cat(const void* ptr1, size_t size1, const void* ptr2, size_t size2);
+CHAR* str_dup(CONST CHAR* str);
+SIZE_T str_len(CONST CHAR* str);
+SIZE_T sizeof_w(CONST WCHAR* str);
+CHAR** split_first_space(CONST CHAR* str);
+INT str_cmp(CONST CHAR *s1, CONST CHAR *s2);
+VOID* mem_set(VOID * dest, INT value, SIZE_T count);
+INT mem_cmp(CONST VOID *s1, CONST VOID *s2, SIZE_T n);
+UCHAR * obfuscate_usage(UCHAR * arr, SIZE_T arr_size);
+VOID rotate_left(UCHAR * data, SIZE_T size, UINT bits);
+VOID* mem_cpy_w(VOID* dest, CONST VOID* src, SIZE_T n);
+VOID* mem_move(VOID* dest, CONST VOID* src, SIZE_T count);
+VOID* mem_cpy(VOID * dest, CONST VOID * src, SIZE_T count);
+WCHAR * wide_concat(CONST WCHAR * str1, CONST WCHAR * str2);
+CHAR* mem_cat(CONST VOID* ptr1, SIZE_T size1, CONST VOID* ptr2, SIZE_T size2);
 
 HMODULE LocalGetModuleHandle(LPCSTR moduleName);
 BOOL IsStringEqual (LPCWSTR Str1, LPCWSTR Str2);
 
 #if CONFIG_NATIVE == TRUE
-void normalize_path(char* path);
+VOID normalize_path(CHAR* path);
 #endif
 
 
